finished cleaning code, added responsiveness for all devices, add small features and remove cdns

--- a/html/includes/navbar.html
+++ b/html/includes/navbar.html
@@ -15,7 +15,7 @@
             </span>
         </div>
         <!-- Menu -->
-        <div id="navbarMenu" class="navbar-menu">
+        <div id="navbarMenu" class="navbar-menu light-menu">
             <div class="navbar-end">
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
