--- a/scss/partials/_features.scss
+++ b/scss/partials/_features.scss
@@ -73,6 +73,10 @@ TABLE OF CONTENTS
         margin-top: 10px;
         font-family: 'Cabin', sans-serif;
     }
+    p {
+        font-family: 'Open Sans', sans-serif;
+        font-size: .9rem;
+    }
 }
 
 /* ==========================================================================
