--- a/scss/partials/_timeline.scss
+++ b/scss/partials/_timeline.scss
@@ -271,7 +271,7 @@ TABLE OF CONTENTS
         }
         p {
             font-size: .9rem;
-            color: #959595;
+            color: rgba(94,147,255,.9);
         }
     }
 }
