fixed for w3c validation

--- a/html/includes/footer.html
+++ b/html/includes/footer.html
@@ -3,7 +3,7 @@
         <!-- Logo -->
         <div class="footer-logo">
             <a href="#">
-                <img class="rotating" src="assets/images/logo/krypton-gradient.svg">
+                <img class="rotating" src="assets/images/logo/krypton-gradient.svg" alt="">
                 <div class="brand-name">Krypton</div>
                 <div class="brand-subtitle">Blockchain brought to another level</div>
             </a>
@@ -67,5 +67,5 @@
     </div>
     
     <!-- Absolute image -->
-    <img class="solar-system" src="assets/images/bg/solar.svg">
+    <img class="solar-system" src="assets/images/bg/solar.svg" alt="">
 </footer>
