--- a/html/includes/navbar.html
+++ b/html/includes/navbar.html
@@ -32,7 +32,7 @@
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
                     <a class="is-centered-responsive" href="#" target="_blank">
-                        <img class="telegram" src="assets/images/logo/telegram.svg">
+                        <img class="telegram" src="assets/images/logo/telegram.svg" alt="">
                         Telegram
                     </a>
                 </div>
