--- a/html/layouts/default.html
+++ b/html/layouts/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zxx">
     <head>
         <!-- Required meta tags always come first -->
         <meta charset="utf-8">
