added token page, added roadmap page, added ICO

--- a/html/includes/footer.html
+++ b/html/includes/footer.html
@@ -46,11 +46,11 @@
             <div class="column is-4">
                 <ul class="footer-links">
                     <li>
-                        <a href="#">Sign up</a>
+                        <a href="#">Register</a>
                     </li>
 
                     <li>
-                        <a href="#">Sign In</a>
+                        <a href="#">Log In</a>
                     </li>
 
                     <li>
