--- a/html/includes/navbar.html
+++ b/html/includes/navbar.html
@@ -19,15 +19,15 @@
             <div class="navbar-end">
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="#demos">Token</a>
+                    <a class="is-centered-responsive" href="token.html">Token</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="#" target="_blank">Ico</a>
+                    <a class="is-centered-responsive" href="ico.html">Ico</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
-                    <a class="is-centered-responsive" href="#" target="_blank">Roadmap</a>
+                    <a class="is-centered-responsive" href="roadmap.html">Roadmap</a>
                 </div>
                 <!-- Menu item -->
                 <div class="navbar-item is-nav-link">
@@ -39,7 +39,7 @@
                 <!-- Sign up -->
                 <div class="navbar-item">
                     <a href="#" class="button k-button k-primary raised has-gradient slanted">
-                        <span class="text">Sign up</span>
+                        <span class="text">Register</span>
                         <span class="front-gradient"></span>
                     </a>
                 </div>
