--- a/scss/partials/_colors.scss
+++ b/scss/partials/_colors.scss
@@ -28,6 +28,7 @@ $chosen-grey: #e0e0e0;
 $chosen-dark-grey: #66676b;
 $grey-6: #666;
 $section-grey: #fcfcfc;
+$light-blue: rgba(94,147,255,.9);
 
 $sidebar: #344258;
 $red: #FF7273;
