--- a/html/includes/scripts.html
+++ b/html/includes/scripts.html
@@ -1,7 +1,10 @@
-<!-- jQuery first, then Bootstrap JS. -->
+<!-- Core js -->
 <script src="{{ root }}assets/js/app.js"></script>
+<!--script src="{{ root }}assets/js/particlesjs/particles.min.js"></script-->
+<script src="{{ root }}assets/js/aos/aos.js"></script>
 
 
 <script src="{{ root }}assets/js/timer.js"></script>
 <script src="{{ root }}assets/js/timeline.js"></script>
-<script src="{{ root }}assets/js/main.js"></script>
+<script src="{{ root }}assets/js/roadmap.js"></script>
+<script src="{{ root }}assets/js/main.js" defer="defer"></script>
