almost finished roadmap page

--- a/html/includes/footer.html
+++ b/html/includes/footer.html
@@ -50,7 +50,7 @@
                     </li>
 
                     <li>
-                        <a href="#">Log In</a>
+                        <a href="#">Media</a>
                     </li>
 
                     <li>
